# 2-0003

./: .cproject  .gitignore  .project  CMakeLists.txt  OpenOCD_2-0003.launch  README.md  sdkconfig
main/: CMakeLists.txt  Motion.c  Motion.h  SPI.c  SPI.h  board.h  comms.c  comms.h  config.h  http.c  http.h  main.c  mqtt.c  mqtt.h
