idf_component_register(SRCS "comms.c" 
                            "mqtt.c" 
                            "cJSON.c"
                            "main.c"
                            "SPI.c"
                            "tmc/ic/TMC2130/TMC2130.c"
                            "Motion.c"
                            "wifi.c"
                            "http.c"
                    INCLUDE_DIRS ".")


